--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>KitaCare - Jadi Tahu, Jadi Peduli</title>
-  <meta content="" name="descriptison">
+  <meta content="KitaCare adalah layanan cross-platform yang menyediakan konsultasi new normal" name="descriptison">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
