--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>KitaCare - Jadi Tahu, Jadi Peduli</title>
-  <meta content="KitaCare adalah layanan cross-platform yang menyediakan konsultasi new normal" name="descriptison">
+  <title>WeCare - Jadi Tahu, Jadi Peduli</title>
+  <meta content="WeCare adalah layanan cross-platform yang menyediakan konsultasi new normal" name="descriptison">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -28,7 +28,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: KitaCare - v2.2.0
+  * Template Name: WeCare - v2.2.0
   * Template URL: https://bootstrapmade.com/free-bootstrap-app-landing-page-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
@@ -42,7 +42,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="index.html">KitaCare</a></h1>
+        <h1 class="text-light"><a href="index.html">WeCare</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -69,7 +69,7 @@
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
             <h1>Jadi Tahu, Jadi Peduli</h1>
-            <h2>KitaCare adalah sebuah platform untuk memberikan pertanyaan kepada ahli medis, seputar gejala covid-19</h2>
+            <h2>WeCare adalah sebuah platform untuk memberikan pertanyaan kepada ahli medis, seputar gejala covid-19</h2>
             <a href="#" class="download-btn"><i class='bx bxs-comment-check' ></i>Mulai Cari Tahu</a>
           </div>
         </div>
@@ -89,7 +89,7 @@
 
         <div class="section-title">
           <h2>Features</h2>
-          <p>Jadi Tahu, Jadi Peduli. KitaCare adalah platform sederhana yang memberikan layanan terbaiknya</p>
+          <p>Jadi Tahu, Jadi Peduli. WeCare adalah platform sederhana yang memberikan layanan terbaiknya</p>
         </div>
 
         <div class="row no-gutters">
@@ -104,7 +104,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-cube-alt"></i>
                   <h4>Aksesibilitas dari Segala Sisi</h4>
-                  <p>Dapatkan akses dari segala perangkat untuk menggunakan layanan KitaCare</p>
+                  <p>Dapatkan akses dari segala perangkat untuk menggunakan layanan WeCare</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-images"></i>
@@ -114,17 +114,17 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-shield"></i>
                   <h4>Keamanan Privasi</h4>
-                  <p>Privasi anda dijamin hanya diketahui oleh  pihak KitaCare</p>
+                  <p>Privasi anda dijamin hanya diketahui oleh  pihak WeCare</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-atom"></i>
                   <h4>Pengembangan Terbuka</h4>
-                  <p>KitaCare membuka komunitas untuk pengembangan  gaya hidup dan cara mencegah dan menghindari covid-19</p>
+                  <p>WeCare membuka komunitas untuk pengembangan  gaya hidup dan cara mencegah dan menghindari covid-19</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
                   <i class="bx bx-id-card"></i>
                   <h4>Tersertifikasi</h4>
-                  <p>KitaCare telah tersertifikasi secara resmi untuk beroperasi</p>
+                  <p>WeCare telah tersertifikasi secara resmi untuk beroperasi</p>
                 </div>
               </div>
             </div>
@@ -226,7 +226,7 @@
               <div class="col-lg-6 info" data-aos="fade-up" data-aos-delay="200">
                 <i class="bx bx-envelope"></i>
                 <h4>Email Us</h4>
-                <p>cs-kita@kitacare.com<br>info-kita@kitacare.com</p>
+                <p>cs-kita@Wecare.com<br>info-kita@Wecare.com</p>
               </div>
               <div class="col-lg-6 info" data-aos="fade-up" data-aos-delay="300">
                 <i class="bx bx-time-five"></i>
@@ -294,13 +294,13 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact" data-aos="fade-up">
-            <h3>KitaCare</h3>
+            <h3>WeCare</h3>
             <p>
               Jl. Umban Sari ( Patin ) No. 1<br>
               Rumbai, Umban Sari, Kec. Rumbai<br>
               Kota Pekanbaru, Riau 28265<br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info-kita@kitacare.com<br>
+              <strong>Email:</strong> info-kita@Wecare.com<br>
             </p>
           </div>
 
@@ -344,7 +344,7 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>KitaCare</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>WeCare</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
